[package]
name = "dfu-nusb"
version = "0.1.1"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Implementation of DFU using nusb and dfu-core"
homepage = "https://github.com/dfu-rs/dfu-nusb"
repository = "https://github.com/dfu-rs/dfu-nusb"
readme = "README.md"

[features]
default = []
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

[dependencies]
dfu-core = { version = "0.8.0", features = ["async"] }
nusb = "0.1.10"
thiserror = "2.0.1"
tokio = { version = "1.48.0", features = ["time"], optional = true }
async-std = { version = "1.13.2", features = ["alloc"], optional = true }

[dev-dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
futures = { version = "0.3.31", features = ["io-compat"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
indicatif = { version = "0.18.2", features = [ "tokio" ] }
